feat: 보드 기능 개발 구현
1. 이미지 업로드 기능
2. 권한 인증 추가
3. 코드 리팩토링